--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="forgot_password">forgot password?</string>
     <string name="verify">verify</string>
     <string name="resend_again">Resend again</string>
+    <string name="download">Download:</string>
 
     <string-array name="building_name">
         <item>Main Block</item>
